# rula-worker-activity

./: .env.example  .gitignore  README.md  TASKS_WEEK2_WEEK3.md  TASKS_WEEK4.md  TASKS_WEEK5.md  TASKS_WEEK6.md  WEEK6_HANDOFF.md  pyproject.toml
configs/: cml_skeleton_layouts.yaml  cwpv_baseline_classifier.yaml  cwpv_pose_features.yaml  data_sources.yaml  ergonomics_screening.yaml  label_map_cml.yaml  label_map_cwpv.yaml  paths.example.yaml  pose_mediapipe.yaml  smartphone_pose_features.yaml  splits.yaml  taxonomy_candidate.yaml  zones_demo.yaml
data/: README.md
docs/: DATASET_DECISIONS.md  DATA_ACQUISITION.md  DATA_SCHEMA.md  RESEARCH_SCOPE.md  joint_mapping.md
scripts/: download_cwpv.py
src/worker_activity/: __init__.py  __main__.py  cli.py  config.py  week6_report.py  week6_sources.py
src/worker_activity/data/: cml_baseline.py  cml_label_map.py  cml_metadata.py  cml_representation.py  cml_subject.py  cwpv_baseline.py  cwpv_inspection.py  cwpv_label_map.py  cwpv_metadata.py  integrity.py  inventory.py  manifests.py  schema.py  smartphone_metadata.py  source_registry.py  splits.py  taxonomy.py
src/worker_activity/ergonomics/: __init__.py  rules.py  screening.py
src/worker_activity/features/: __init__.py  cml_feature_pipeline.py  cml_skeleton_io.py  (+4 more)
tests/: conftest.py  test_cml_baseline.py  test_cml_skeleton_features.py  test_config.py  test_cwpv_baseline.py  test_cwpv_metadata.py  test_inventory.py  test_metadata.py  test_pose.py  test_schema.py  test_smartphone_domain_transfer.py  test_source_registry.py  test_splits.py  test_week6_ergonomics_zones.py
(+13 files in other folders)
