[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-activity"
version = "0.1.0"
description = "Vision-based worker activity and ergonomic risk recognition for construction videos"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "RULA Research Project" }]
dependencies = [
    "numpy>=1.26.0,<2.0",
    "pandas>=2.2.0,<3.0",
    "opencv-python>=4.10.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.66.0,<5.0",
    "pyarrow>=14.0.0,<20.0",
    "mediapipe>=0.10.14,<0.11",
    "scikit-learn>=1.4.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
]

[project.scripts]
worker-activity = "worker_activity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
